--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> D3 Test </title>
 
 <body>
-
+<p> first paragraph </p>
 <div> class = "canva" </div>
 </body>
 <script>  src= "./practice.js"  </script>
