fix the script path

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p> first paragraph </p>
 <div> class = "canva" </div>
 </body>
-<script>  src= "./practice.js"  </script>
+<script>  src= "practice.js"  </script>
 
 </html>
