fix the div element typo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <p> first paragraph </p>
-<div> class = "canva" </div>
+<div class = "canva" </div>
 </body>
 <script>  src= "practice.js"  </script>
 
