bug fix incorrect reference

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ g2020.append('text')
 .text("2020");
 
 
-    colorScale.domain(nested.map(d => d.key));
+    colorScale.domain(nested20192020.map(d => d.key));
 
 
 
