--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <script>
 async function Introduction() { 
-    await d3.csv("http://127.0.0.1:8887/2019AggAviationData.csv")  
+    await d3.csv("./2019AggAviationData.csv")  
     svg = d3.select("#Introduction").select("svg")
         const width = +svg.attr('width');
         const height = +svg.attr('height');
@@ -191,7 +191,7 @@ async function Introduction() {
 }
 async function ChartApril2019() {
 
-     await d3.csv("http://127.0.0.1:8887/2019AggAviationData.csv")    
+     await d3.csv("./2019AggAviationData.csv")    
     .then(function(data) {
        const timeParser = d3.timeParse("%Y-%m-%d")
 
@@ -409,7 +409,7 @@ async function ChartApril2019() {
 }
 async function ChartApril2020() {
 
-    await d3.csv("http://127.0.0.1:8887/2020AggAviationData.csv")    
+    await d3.csv("./2020AggAviationData.csv")    
     .then(function(data) {
         const timeParser = d3.timeParse("%Y-%m-%d")
 
@@ -626,7 +626,7 @@ async function ChartApril2020() {
     })
 }
 async function MultiChartSummary () {
-    await d3.csv("http://127.0.0.1:8887/2019And2020TwoColAggAviationData.csv")    
+    await d3.csv("./2019And2020TwoColAggAviationData.csv")    
         .then(function(data) {
 
     dateParse = d3.timeParse("%Y-%m-%d");
