--- a/narrativeViz4thScene.html
+++ b/narrativeViz4thScene.html
@@ -108,7 +108,7 @@
 
 <script>
 async function MultiChartSummary () {
-    await d3.csv("http://127.0.0.1:8887/2019And2020TwoColAggAviationData.csv")    
+    await d3.csv("./2019And2020TwoColAggAviationData.csv")    
         .then(function(data) {
 
     dateParse = d3.timeParse("%Y-%m-%d");
