more clean up for slide 1 and multiple scene usa cases

--- a/narrativeViz2ndScene.html
+++ b/narrativeViz2ndScene.html
@@ -22,6 +22,7 @@
         display: inline-flex;
         margin-right: 30px;
         margin-block-start: 20px;
+        font-size: 1.5rem;
     }
     .line {
       fill: none;
