--- a/narrativeViz3rdScene.html
+++ b/narrativeViz3rdScene.html
@@ -22,6 +22,7 @@
         display: inline-flex;
         margin-right: 30px;
         margin-block-start: 20px;
+        font-size: 1.5rem;
     }
     .line {
       fill: none;
