--- a/narrativeViz4thScene.html
+++ b/narrativeViz4thScene.html
@@ -20,6 +20,7 @@
     li {
         display: inline-flex;
         margin-right: 30px;
+        font-size: 1.5rem;
     }
     .line {
       fill: none;
