--- a/narrativeViz4thScene.html
+++ b/narrativeViz4thScene.html
@@ -21,6 +21,7 @@
         display: inline-flex;
         margin-right: 30px;
         font-size: 1.5rem;
+        margin-bottom: 1rem;
     }
     .line {
       fill: none;
