more cleanup removed console logs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> 
     <ul class="nav">
         <li><a href="./narrativeViz2ndScene.html"> Next: Flights Trend April 2019</a></li>
+    </ul>
 </head>
 <title> Narrative Visualisation Flights Trend Pre and During Covid-19 </title>
 <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -103,7 +104,7 @@
     }
 
 </style>
-<body onload='Introduction()'>
+<body>
 
     <h1> COVID-19 Impact on the number of Flights and Their trends in USA Top-10 States Comparison between April-2019 and April-2020 </h1>
     <p> The COVID-19 impacted on the number of flights that flew globally.
