--- a/narrativeViz3rdScene.html
+++ b/narrativeViz3rdScene.html
@@ -100,11 +100,11 @@ async function ChartApril2020() {
 
     await d3.csv("./2020AggAviationData.csv")    
     .then(function(data) {
-        const timeParser = d3.timeParse("%Y-%m-%d")
+        const dateParser = d3.timeParse("%Y-%m-%d")
 
         data.forEach(function(d) { 
              d['FLIGHT_COUNT'] = +d['FLIGHT_COUNT']
-             d['FL_DATE'] = new Date(d['FL_DATE'])
+             d['FL_DATE'] = dateParser(d['FL_DATE'])
          })
         
         svg = d3.select("#Arpil2020Chart").select("svg")
