time format adjustments

--- a/narrativeViz2ndScene.html
+++ b/narrativeViz2ndScene.html
@@ -138,7 +138,7 @@ async function ChartApril2019() {
                       .tickSize(-innerHeight)
                       .tickPadding(15)
                       .ticks(10)
-                      .tickFormat(d3.timeFormat("%b/%d"));
+                      .tickFormat(d3.timeFormat("%m-%d"));
 
 
         var yScale = d3.scaleLinear()
