paragraph text additions

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
     <h1> COVID-19 Impact on the number of Flights and Their trends in USA Top-10 States Comparison between April-2019 and April-2020 </h1>
     <p> The COVID-19 impacted on the number of flights that flew globally.
-        This visualization illustrates the number of flights flew and their trend in April-2019 and in April-2020 in USA
+        This visualization illustrates the number of flights flew and their trend in April-2019 and in April-2020 in USA for Top-10 States
         and the flight trends are shown USA state-wise for April-2019 and April-2020. </p>
-    <p class="list"> <em> Next 2 slides provide total number of flights and thier trends for top-10 USA states. </em></p>
-    <p class="list1"> <em> Last slide allows user to select any state in the top-10 USA states.</em></p>
+    <p class="list"> <em> Next 2 scenes provide total number of flights and thier trends for top-10 USA states. </em></p>
+    <p class="list1"> <em> Last scene allows user to select any state in the top-10 USA states.</em></p>
     <p class="list2"> <em> Note: Total number of flights for a given state include both departed and arrived flights.</em></p>
     <p class="list3"> <em>    Note: Top-10 states refer to in terms of total number of flights.</em></p>
 
